@@ -1,3 +1,9 @@
+2006-12-07  Hiroyuki Ito  <ZXB01226@nifty.com>
+
+	* [w3m-dev 04185] Re: italic text
+	* file.c, fm.h, html.c, html.h, tagtable.tab:
+	  display <em> and <i> elements with bold letters.
+
 2006-12-07  Hideyuki SHIRAI  <shirai@meadowy.org>
 
 	* [w3m-dev 04184] automatic uncompression in downloading
